--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <h1> Finished Enhancement </h1>
 
 
-<p> Use "git checkout dev" to change into master</p>
+<p> Use "git checkout dev" to change into dev branch</p>
