--- a/index.html
+++ b/index.html
@@ -6,3 +6,7 @@
 
 
 <p> Use "git checkout dev" to change into dev branch</p>
+
+<p>  cd .\Downloads\Programs\ </p>
+<p> .\ngrok.exe http 8080 </p>
+<p> Change Git Webhook URL</p>
