--- a/index.html
+++ b/index.html
@@ -27,3 +27,7 @@
 <h4> Try Status COde</h4>
 
 <p> Use "git checkout master" to change into master</p>
+
+<p>  cd .\Downloads\Programs\ </p>
+<p> .\ngrok.exe http 8080 </p>
+<p> Change Git Webhook URL</p>
